--- a/library_website/.gitignore
+++ b/library_website/.gitignore
@@ -1,7 +1,5 @@
-media/
+# Ignore Python cache files
+__pycache__/
 
-# Ignore all images (optional)
-*.png
-*.jpg
-*.jpeg
-*.gif
+# Ignore media folder
+/media/
